# clam

./: .gitignore  .readthedocs.yaml  .travis.yml  Cargo.toml  ChangeLog  INSTALL  LICENSE  MANIFEST.in  Makefile  PLAN.md  README  README.md  README.rst  TODO  _config.yml  brainstorm  clamclient.py  clamdispatcher.py  clamnewproject.py  clamservice.py  codemeta.json  index.html  requirements.txt  setup.cfg  setup.py  startclamservice.py
_layouts/: ilkng.html  lamalayout.html
clam/: clamclient.py  clamdispatcher.py  clamnewproject.py  clamservice.py  startclamservice.py
clamopener/: forms.py  ilk.wsgi  models.py  settings.py  settings.py.template  urls.py  views.py
clients/: clienttest.py  textstats.py
common/: auth.py  client.py  converters.py  data.py  digestauth.py  formats.py  languages.py  metadata.py  oauth.py  parameters.py  status.py  util.py  viewers.py
config/: alpino.py  authtest.py  colibricore.py  colibricore.wsgi  defaults.py  example.wsgi  foliastats.py  freqlist.py  frog.py  frog.wsgi  multiplier.py  nginx-clamservices-conf  oersetter.py  simplefrog.py  sonardropbox.py  spellcorrectlist.py  tadpole.py  tel.py  template.py  test.py  test2.py  textstats.py  ticclops.py  timbl.py  ucto.py  ucto.wsgi  valkuil.py  valkuil.wsgi
docs/: Makefile  clam.bib  clam.rng  clam_clst_demo_pres.tex  clam_manual.html  clam_manual.tex  clam_pres1.tex  clam_pres2.tex  clam_pres3.tex  clam_pres_clarin_webservices.tex  clam_sysdemo_coling2014.tex  coling2014.sty  coling2014.tex  requirements.txt  ru-beeldmerk-zwart.eps
jobservice/: defaultsettings.py  digestauth.py  (+6 more)
(+196 files in other folders)
