[package]
name = "clam"
version = "0.4.0"
edition = "2024"
authors = ["Maarten van Gompel <proycon@anaproy.nl>"]
description = "Quickly build RESTful webservices and user interfaces around your command-line tools"
include = ["src/**/*","tests/**/*", "LICENSE", "README.md"]
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/proycon/clam"
keywords = [ "webservice", "rest"]

[dependencies]
axum = "0.8.8"
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
